# pyskat

./: .gitignore  Makefile  README.md  cards.cpp  cards.hpp  halfskat.cpp  halfskat.hpp  pg.py  play_against_model.py  pyproject.toml  pyskat.cpp  setup.py  skat_model.h5  tests.cpp  train_policy_gradient.py
include/: cards.hpp  halfskat.hpp
src/: cards.cpp  cards.hpp  halfskat.cpp  halfskat.hpp  pyskat.cpp  pyskat_bindings.cpp  tests.cpp  tests.hpp
src/pyskat/: __init__.py  player.py  training.py
tests/: test_cpp.py
